# pyramid-backstage

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  COLLABORATION.md  README.md  STATUS.md  hackathon.txt
.github/workflows/: ci.yml  deploy.yml
.planning/: ASSUMPTIONS.md  AUDIT_CONTRACT_WATCHLIST.md  FRONTEND_AUDIT_NOTES.md  FRONTEND_AUDIT_REPORT.md  REMEDIATION_PLAN.md  SESSION_LOG.md  tasks.mjs
CLAUDE_DESIGN/: Command.dc.html  Locale.dc.html  Pages.dc.html  Primitives.dc.html  README.md  Shells.dc.html  Tokens.dc.html  index.dc.html
New_Docs/: _gen_catalog.py  _gen_floor_svg.py
ai-orchestrator/: .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  pyproject.toml
ai-orchestrator/app/: __init__.py  chat.py  config.py  intake.py  main.py  ops_core_client.py  planning.py  schemas.py  session.py  venue.py
ai-orchestrator/app/data/: spaces.catalog.json
ai-orchestrator/app/graph/: __init__.py  planning_graph.py
ai-orchestrator/app/rag/: __init__.py  chroma.py
ai-orchestrator/tests/: test_chat.py  test_intake.py  test_narrative.py  test_planning.py  test_rag.py  test_venue.py
docs/02-domain/: ASSETS.md  (+10 more)
frontend/: .env.example  Dockerfile  Dockerfile.dev  index.html  nginx.spa.conf  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
infrastructure/: .env.prod.example  README.md  docker-compose.prod.yml  docker-compose.yml
mock-ops-core/: Dockerfile.dev  README.md  package-lock.json  package.json  server.ts  tsconfig.json
ops-core/: .env.example  Dockerfile  Dockerfile.dev  openapi.yaml  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts  vitest.setup.ts
(+364 files in other folders)
